--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /Solution.Screen/Screen/Logic/obj
 /Solution.Screen/Screen/ScreenUnitTest/bin
 /Solution.Screen/Screen/ScreenUnitTest/obj
+/Solution.Screen/Controller/Solution.Controller/.vs
+/Solution.Screen/Controller/Solution.Controller/ConApp/bin/Debug/net9.0
+/Solution.Screen/Controller/Solution.Controller/ConApp/obj
+/Solution.Screen/Screen/ConApp/bin/Debug/net9.0
+/Solution.Screen/Screen/.vs/ProjectEvaluation
+/Solution.Screen/Screen/Logic/bin/Debug/net9.0
