--- a/Solution.Screen/Controller/Solution.Controller/ConApp/ConApp.csproj
+++ b/Solution.Screen/Controller/Solution.Controller/ConApp/ConApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-          <LangVersion>preview</LangVersion>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
