--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /Solution.Screen/Screen/ConApp/bin/Debug/net9.0
 /Solution.Screen/Screen/.vs/ProjectEvaluation
 /Solution.Screen/Screen/Logic/bin/Debug/net9.0
+/Solution.Module/BoxCharifyer/.vs/BoxCharifyer
+/Solution.Screen/Doku/.vs/Doku
+/Solution.Module/BoxCharifyer
