--- a/Solution.Module/BoxCharifyer/Logic/Logic.csproj
+++ b/Solution.Module/BoxCharifyer/Logic/Logic.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="3.118.0-preview.2.3" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
+  </ItemGroup>
+
 </Project>
