--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /Solution.Module/BoxCharifyer/.vs/BoxCharifyer
 /Solution.Screen/Doku/.vs/Doku
 /Solution.Module/BoxCharifyer
+/Solution.Module/BoxComposer/.vs
+/Solution.Module/BoxComposer/ConApp/obj
