--- a/Solution.Module/BoxComposer/ConApp/ConApp.csproj
+++ b/Solution.Module/BoxComposer/ConApp/ConApp.csproj
@@ -1,10 +1,41 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+      <PropertyGroup>
+            <Nullable>enable</Nullable>
+            <OutputType>Exe</OutputType>
+            <LangVersion>latest</LangVersion>
+            <ImplicitUsings>enable</ImplicitUsings>
+            <TargetFramework>net9.0</TargetFramework>
+      </PropertyGroup>
+
+      
+      <ItemGroup>
+            <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
+                  <PrivateAssets>all</PrivateAssets>
+                  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            </PackageReference>
+            
+            <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.0" />
+      </ItemGroup>
+
+
+      <ItemGroup>
+            <Content Include="appsettings.Development.json">
+                  <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+                  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+                  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            </Content>
+      
+            <Content Include="appsettings.json">
+                  <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+                  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+                  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            </Content>
+      </ItemGroup>
+ 
+      
+      <ItemGroup>
+            <ProjectReference Include="..\Logic\Logic.csproj" />
+      </ItemGroup>
 
 </Project>
